# embedded-examples

./: .gitignore  LICENSE  Makefile  README.md
embed-bear/src/: main.bl
embed-c/: Makefile  README.md
embed-c/simple/: Makefile
embed-c/src/: main.c
embed-rust/: Cargo.toml  Makefile  README.md
embed-rust/src/: lib.rs
embed-zig/: Makefile  README.md  build.zig
embed-zig/simple/src/: main.zig
embed-zig/src/: main.zig
